<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
    
    <LinearLayout 
        android:id="@+id/sc_add_new_word"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/activity_splash"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:visibility="visible"
	        android:background="@drawable/add" />

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="#222222"
		    android:orientation="vertical" >
		
		    <!-- add new word box -->
		    <LinearLayout
		        android:id="@+id/add_new_box"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp">
		        
		        <TextView
		            android:id="@+id/heading"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/add_new_word"
		            android:textColor="#868686"
		            android:layout_gravity="center"
		            android:textSize="30sp" />
		        
		        <EditText 
		            android:id="@+id/txt_add_new_word"
		            android:layout_width="fill_parent"
		            android:layout_height="40dp"
		            android:layout_marginTop="30dp"
		            android:layout_marginLeft="15dp"
		            android:layout_marginRight="15dp"
		            android:inputType="text"
		            android:textColor="#ffffff"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:hint="@string/pc_word"
		            android:background="@drawable/input_bg"/>
		        
		        <EditText
		            android:id="@+id/txt_add_new_meaning"
		            android:layout_width="fill_parent"
		            android:layout_height="40dp"
		            android:layout_marginLeft="15dp"
		            android:layout_marginRight="15dp"
		            android:layout_marginTop="10dp"
		            android:inputType="text"
		            android:background="@drawable/input_bg"
		            android:hint="@string/pc_meaning"
		            android:onClick="addNewWord"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:textColor="#ffffff" />
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="15dp"
		            android:layout_marginTop="10dp"
		            android:text="@string/nw_note"
		            android:textColor="#868686"
		            android:textSize="10sp" />
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:layout_marginLeft="15dp"
		            android:layout_marginRight="15dp"
		            android:layout_marginTop="20dp">
		            
		            <Button
			            android:id="@+id/btn_add_new_word"
			            android:layout_width="0dp"
			            android:layout_height="50dp"
			            android:text="@string/nw_add_btn"
			            android:textColor="#ffffff"
			            android:textSize="22sp"
			            android:onClick="addNewWord"
			            android:layout_weight="1.6"
			            android:background="@drawable/add_new_word_btn" />
		            
		            <TextView 
		                android:id="@+id/dic_add_status"
		                android:layout_width="0dp"
		                android:layout_height="50dp"
		                android:layout_weight="1"
		                android:background="#383c38"
		                android:textColor="#9d9d9d"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text=""/>
		            
		        </LinearLayout>
		        
		    </LinearLayout>
		    
		   	<LinearLayout
		   	    android:id="@+id/footer_bar"
		   	    android:layout_width="fill_parent"
		   	    android:layout_height="8dp"
		   	    android:orientation="vertical"
		   	    android:layout_alignParentBottom="true"
		   	    android:background="#14924c" ></LinearLayout>
		   	    
		    
		</RelativeLayout>
		
    </LinearLayout>
</LinearLayout>
