<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
    
    <LinearLayout 
        android:id="@+id/sc_translate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/activity_splash"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:background="@drawable/translate" />

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="#222222"
		    android:orientation="vertical" >

		    <!-- stats box -->
		    <LinearLayout
		        android:id="@+id/translate_head_box"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:layout_centerHorizontal="true"
		        android:background="#272727"
		        android:paddingTop="20dp"
		        android:paddingBottom="20dp">
		        
		        <TextView
		            android:id="@+id/heading"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/translate_heading"
		            android:textColor="#868686"
		            android:layout_gravity="center"
		            android:textSize="30sp" />
		
		    </LinearLayout>
		    
		    <!-- Container -->
		    <ScrollView
		        android:id="@+id/translate_scroll"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_below="@id/translate_head_box" >
		        
		        <!-- Block -->
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical">
		        
			        <LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:paddingTop="20dp"
			            android:paddingBottom="20dp"
			            android:orientation="vertical"
			            android:background="#1d1d1f">
			            
			            <TextView 
			                android:id="@+id/translated_txt"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:layout_gravity="center"
			                android:gravity="center"
			                android:textSize="22sp"
			                android:layout_marginLeft="10dp"
			                android:layout_marginRight="10dp"
			                android:layout_marginTop="5dp"
			                android:visibility="gone"
			                android:textColor="#ffffff" />
			            
			            <ProgressBar
			                android:id="@+id/translate_loader"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:visibility="invisible"
			                android:layout_gravity="center" />
			            
			        </LinearLayout>
			         	
		            <LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="20dp"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:orientation="horizontal">
			            
			            <EditText 
			                android:id="@+id/translate_word"
			                android:layout_width="0dp"
			                android:layout_height="40dp"
			                android:layout_marginRight="5dp"
			                android:hint="@string/translate_hint"
			                android:inputType="text"
				            android:paddingLeft="10dp"
				            android:paddingRight="10dp"
				            android:background="@drawable/input_bg"
			                android:layout_weight="2.2" />
			            
			            <Button 
			                android:id="@+id/btn_translate"
			                android:layout_width="0dp"
			                android:layout_height="40dp"
			                android:text="@string/btn_translate"
			                android:background="@drawable/btn_translate"
			                android:textColor="#ffffff"
			                android:onClick="translateWord"
			                android:layout_weight="1"/>
			            
			        </LinearLayout>
		            
		        </LinearLayout>
		
		    </ScrollView>
			
		   	<LinearLayout
		   	    android:id="@+id/footer_bar"
		   	    android:layout_width="fill_parent"
		   	    android:layout_height="8dp"
		   	    android:orientation="vertical"
		   	    android:layout_alignParentBottom="true"
		   	    android:background="#142692" ></LinearLayout>
		   	    
		    
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>
